--- a/docs/articles/guolu/第一章-对物理环境的适应：水和营养物质.md
+++ b/docs/articles/guolu/第一章-对物理环境的适应：水和营养物质.md
@@ -73,13 +73,13 @@ surface water loss)
   
 * Salt secreting`分泌` glands`腺体` in birds
   
-![01](https://github.com/Tom2021-vice/img/blob/main/02.jpg?raw=true)
+[![zGRfRP.jpg](https://s1.ax1x.com/2022/11/24/zGRfRP.jpg)](https://imgse.com/i/zGRfRP)
   
 ## 5. Draw the scheme of the Hydrologic Cycle
 
 *绘制水文循环图*
 
-![02](https://github.com/Tom2021-vice/img/blob/main/03.jpg?raw=true)
+[![zGRWGt.jpg](https://s1.ax1x.com/2022/11/24/zGRWGt.jpg)](https://imgse.com/i/zGRWGt)
 
 >Precipitation(PPT) 降⽔
 Interception 截流
