--- a/docs/articles/guolu/第二章-对物理环境的适应：光，能量和热量.md
+++ b/docs/articles/guolu/第二章-对物理环境的适应：光，能量和热量.md
@@ -4,22 +4,22 @@
 
 ## 1.Differentiate the $C_3$, $C_4$ and $ACM$ photosynthetic pathway.
 
-*区分 $C_3$, $C_4$ 和 $ACM$ 三种光合作用路径*
+*区分 $C_3$ , $C_4$ 和 $ACM$ 三种光合作用路径*
 
 1. $C_3$ cycle
 
 The Calvin cycle (C3 cycle) initially `最初，开头` fixes $CO_2$ into $3-PGA$   (phosphoglycerate) `3-磷酸⽢油酸盐`
 
-  >$ CO_2+ RuBP→\text{2 3}−PGA $ 
+  >$CO_2+ RuBP→\text{2 3}−PGA$ 
 
   but $C_3$ cycle has one major drawback
   >$O_2 + RuBP→CO_2$
 
   This can reduce the efficiency of photosynthesis
 
-![zGh0x0.jpg](https://s1.ax1x.com/2022/11/24/zGh0x0.jpg)](https://imgse.com/i/zGh0x0)
+![zGh0x0.jpg](https://s1.ax1x.com/2022/11/24/zGh0x0.jpg)
 
-2. $C_4$  cycle
+1. $C_4$  cycle
 
 Usually be seen in the dry and warm environment 
 
@@ -41,7 +41,7 @@ stoma  气孔
 vascular bundle sheath cell 维管束鞘厚壁组织细胞
 mesophyll cell 叶肉细胞
 
-![zG7xQs.jpg](https://s1.ax1x.com/2022/11/24/zG7xQs.jpg)](https://imgse.com/i/zG7xQs>
+![zG7xQs.jpg](https://s1.ax1x.com/2022/11/24/zG7xQs.jpg)
 
 1. $CAM$ pathway
 
@@ -74,13 +74,13 @@ PAR:photosynthetically active radiation `光合有效辐射 400-700 nm`
 
 *恒温动物和变温动物的区别是什么？*
 
-[![zGvavD.jpg](https://s1.ax1x.com/2022/11/24/zGvavD.jpg)](https://imgse.com/i/zGvavD)
+![zGvavD.jpg](https://s1.ax1x.com/2022/11/24/zGvavD.jpg)
 
 >endothermy  内温性
  ecotothermy 外温性
  respiration 呼吸作用
  
- ![01](https://pics6.baidu.com/feed/b3fb43166d224f4ac9d831f199f8d9549922d1a1.jpeg@f_auto?token=d42f20453291c02dd1cb104f7b49f57a&s=0130E833499C6DCC5ADD38C2000080B2)
+![](https://raw.githubusercontent.com/Tom2021-vice/figure/main/b3fb43166d224f4ac9d831f199f8d9549922d1a1.jpg)
 
  >随着半径增加，相对散热面积显著下降。
 
