--- a/docs/articles/guolu/第二章-对物理环境的适应：光，能量和热量.md
+++ b/docs/articles/guolu/第二章-对物理环境的适应：光，能量和热量.md
@@ -4,9 +4,9 @@
 
 ## 1.Differentiate the $C_3$, $C_4$ and $ACM$ photosynthetic pathway.
 
-*区分 $C_3$ , $C_4$ 和 $ACM$ 三种光合作用路径*
+*区分 $C_3$ , $C_4$ 和 $ACM$ 三种光合作用路径*<br />
 
-1. $C_3$ cycle
+  1.$C_3$ cycle<br />
 
 The Calvin cycle (C3 cycle) initially `最初，开头` fixes $CO_2$ into $3-PGA$   (phosphoglycerate) `3-磷酸⽢油酸盐`
 
@@ -19,7 +19,7 @@ The Calvin cycle (C3 cycle) initially `最初，开头` fixes $CO_2$ into $3-PGA
 
 ![zGh0x0.jpg](https://s1.ax1x.com/2022/11/24/zGh0x0.jpg)
 
-1. $C_4$  cycle
+   2.$C_4$  cycle<br />
 
 Usually be seen in the dry and warm environment 
 
@@ -43,7 +43,7 @@ mesophyll cell 叶肉细胞
 
 ![zG7xQs.jpg](https://s1.ax1x.com/2022/11/24/zG7xQs.jpg)
 
-1. $CAM$ pathway
+   3.$CAM$ pathway
 
 CAM `Crassulacean acid metabolism(景天酸代谢)` . Usually be seen  in hot desert area
 
